--- a/LightBnB_WebApp-master/package.json
+++ b/LightBnB_WebApp-master/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.0",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pg": "^8.11.3"
   }
 }
